<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".instalar">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="384dp"
        android:layout_height="155dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/comentarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/hintcomentarios"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="217dp"
        android:layout_height="34dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="88dp"
        android:text="@string/confirmarinstalacion"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/botoninstalar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/botoninstalar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="32dp"
        android:text="@string/comentarios"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/valor"
        android:layout_width="301dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/hint"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/botoninstalar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView3"
        app:layout_constraintVertical_bias="0.006" />

</androidx.constraintlayout.widget.ConstraintLayout>