<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity2">

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/Bactualizar"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/zonas"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <ImageButton
        android:id="@+id/Bactualizar"
        android:layout_width="57dp"
        android:layout_height="51dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="@android:drawable/ic_popup_sync"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_popup_sync"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/botondesalida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/botonasignar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ListView
        android:id="@+id/tv1"
        android:layout_width="395dp"
        android:layout_height="270dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/botondesalida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/verpor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="173dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toStartOf="@+id/Bactualizar"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="389dp"
        android:layout_height="109dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/datoscliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="35dp"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

    <Switch
        android:id="@+id/switch1"
        android:layout_width="206dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="88dp"
        android:minHeight="48dp"
        android:text="@string/solohoy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>